--- a/templates/incentives.html
+++ b/templates/incentives.html
@@ -51,7 +51,7 @@
   <div class="content">
     <p class="description"></p>
       </p><a class="card" href="#!">
-      <div class="front" >
+      <div class="front" style="background-image: url(../static/incentivesImg/upscale-bootcamp.png)">
         <p>UPSCALE bootcamp</p>
       </div>
       <div class="back">
@@ -60,7 +60,7 @@
         
         </div>
       </div></a><a class="card" href="#!">
-      <div class="front" style="background-image: url(//source.unsplash.com/300x402)">
+      <div class="front" style="background-image: url(../static/incentivesImg/entrepreneurship-bootcamp.png)">
         <p>Entrepreneurship bootcamp</p>
       </div>
       <div class="back">
@@ -70,7 +70,7 @@
 
         </div>
       </div></a><a class="card" href="#!">
-      <div class="front" style="background-image: url(//source.unsplash.com/300x403)">
+      <div class="front" style="background-image: url(../static/incentivesImg/pre-incubation.png)">
         <p>Pre-incubation</p>
       </div>
       <div class="back">
@@ -79,7 +79,7 @@
         
         </div>
       </div></a><a class="card" href="#!">
-      <div class="front" style="background-image: url(//source.unsplash.com/300x404)">
+      <div class="front" style="background-image: url(../static/incentivesImg/bonus-credits.png)">
         <p>Bonus credits</p>
       </div>
       <div class="back">
@@ -88,7 +88,7 @@
          
         </div>
       </div></a><a class="card" href="#!">
-      <div class="front" style="background-image: url(//source.unsplash.com/300x405)">
+      <div class="front" style="background-image: url(../static/incentivesImg/ACC-PROGRAM.png)">
         <p>Accelaration program</p>
       </div>
       <div class="back">
@@ -97,7 +97,7 @@
         
         </div>
       </div></a><a class="card" href="#!">
-      <div class="front" style="background-image: url(//source.unsplash.com/300x406)">
+      <div class="front" style="background-image: url(../static/incentivesImg/innovation-support.png)">
         <p>Innovation support</p>
       </div>
       <div class="back">
@@ -107,7 +107,7 @@
         </div>
       </div></a>
       <a class="card" href="#!">
-        <div class="front">
+        <div class="front" style="background-image: url(../static/incentivesImg/CASH.png)">
           <p>Cash Prize</p>
         </div>
         <div class="back">
@@ -120,7 +120,7 @@
           </div>
         </div></a>
       <a class="card" href="#!">
-        <div class="front" style="background-image: url(//source.unsplash.com/300x406)">
+        <div class="front" style="background-image: url(../static/incentivesImg/ib.jpg)">
           <p>Mentorship program '20</p>
         </div>
         <div class="back">
@@ -130,7 +130,7 @@
           </div>
         </div></a>
         <a class="card" href="#!">
-          <div class="front" style="background-image: url(//source.unsplash.com/300x406)">
+          <div class="front" style="background-image: url(../static/incentivesImg/network-opp.png)">
             <p>Networking opportunities</p>
           </div>
           <div class="back">
@@ -141,7 +141,7 @@
             </div>
           </div></a>
           <a class="card" href="#!">
-            <div class="front">
+            <div class="front" style="background-image: url(../static/incentivesImg/ib.jpg)">
               <p>Expert Mentorship by iB Hub</p>
             </div>
             <div class="back">
@@ -151,7 +151,7 @@
               </div>
             </div></a>
             <a class="card" href="#!">
-              <div class="front">
+              <div class="front" style="background-image: url(../static/incentivesImg/investment.jpg)">
                 <p>Investors</p>
               </div>
               <div class="back">
@@ -161,7 +161,7 @@
                 </div>
               </div></a>
               <a class="card" href="#!">
-                <div class="front" style="background-image:url('img/Untitled-1.jpg')">
+                <div class="front" style="background-image:url(../static/incentivesImg/Untitled-1.jpg)">
                   <p>Media Coverage</p>
                 </div>
                 <div class="back">
@@ -171,7 +171,7 @@
                   </div>
                 </div></a>
                 <a class="card" href="#!">
-                  <div class="front">
+                  <div class="front" style="background-image:url(../static/incentivesImg/binc.jpg)">
                     <p>Incubation Opportunity</p>
                   </div>
                   <div class="back">
@@ -181,7 +181,7 @@
                     </div>
                   </div></a>
                   <a class="card" href="#!">
-                    <div class="front" >
+                    <div class="front" style="background-image:url(../static/incentivesImg/mentors.jpg)" >
                       <p>Professional Mentorship</p>
                     </div>
                     <div class="back">
@@ -191,7 +191,7 @@
                       </div>
                     </div></a>
                     <a class="card" href="#!">
-                      <div class="front" >
+                      <div class="front"style="background-image:url(../static/incentivesImg/workshop.jpg)" >
                         <p>Workshops</p>
                       </div>
                       <div class="back">
