--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
   <link href="{% static 'assets/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
   <link href="{% static 'assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
 
-  <!-- Template Main CSS File --
+  <!-- Template Main CSS File -->
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
  <link rel="stylesheet" href="{% static 'css/fontawesome-all.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -727,7 +727,12 @@ fsEnter.addEventListener('click', function (e) {
           <span>What is ACTION PLAN?</span>
         </div>
 
-        <div class="row">
+        <div class="row" style="padding: 0 20px 0 20px; background: rgba( 141, 141, 141, 0.15 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 8px );
+-webkit-backdrop-filter: blur( 8px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );">
          <div class="section-title">
           <p class="ap">
               We believe that young minds hold the key to solve numerous challenges
@@ -1172,7 +1177,7 @@ fsEnter.addEventListener('click', function (e) {
             data-aos="fade-up"
             style="margin-top: auto; margin-bottom: 0px; "
           >
-            <h5>
+            <h5 style="color: #fff;">
               Anusar Modi
               </h5>
             <h5 style="font-weight: 300;">
@@ -1188,7 +1193,7 @@ fsEnter.addEventListener('click', function (e) {
             data-aos="fade-up"
             style="margin-top: auto; margin-bottom: 0px; font-weight: 300;"
           >
-            <h5>
+            <h5 style="color: #fff;">
  Aditi Khode
               </h5>
             <h5 style="font-weight: 300;" >
@@ -1204,8 +1209,8 @@ fsEnter.addEventListener('click', function (e) {
             data-aos="fade-up"
             style="margin-top: auto; margin-bottom: 0px; font-weight: 300;"
           >
-            <h5>
- Aryan Raj
+            <h5 style="color: #fff;">
+                Aryan Raj
               </h5>
             <h5 style="font-weight: 300;">
               Competitions Manager<br />
