--- a/templates/incentives.html
+++ b/templates/incentives.html
@@ -181,7 +181,7 @@
                     </div>
                   </div></a>
                   <a class="card" href="#!">
-                    <div class="front" style="background-image:url(../static/incentivesImg/mentors.jpg)" >
+                    <div class="front" style="background-image:url(../static/incentivesImg/mentors.png)" >
                       <p>Professional Mentorship</p>
                     </div>
                     <div class="back">
