--- a/templates/partners.html
+++ b/templates/partners.html
@@ -100,6 +100,9 @@
               <li data-filter=".filter-d">Merchandise Partners</li>
               <li data-filter=".filter-e">Media Partners</li>
               <li data-filter=".filter-f">Outreach Partners</li>
+                <li data-filter=".filter-g">Ecosystem Partners</li>
+                <li data-filter=".filter-h">Institution Partners</li>
+                <li data-filter=".filter-i"> Program Partners</li>
             </ul>
           </div>
         </div>
@@ -109,7 +112,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-a">
             <div class="portfolio-wrap">
                 <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
+              <img src="{% static 'assetspartners/Ads/Incubators/Timed.jpg' %}" class="img-fluid" alt="">
                 </a>
               <div class="portfolio-info">
                 <div>
@@ -120,162 +123,7 @@
              <div class="col-lg-4 col-md-6 portfolio-item filter-a">
             <div class="portfolio-wrap">
                 <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
-                </a>
-              <div class="portfolio-info">
-                <div>
-                </div>
-              </div>
-            </div>
-          </div>
-             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
-            <div class="portfolio-wrap">
-                <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
-                </a>
-              <div class="portfolio-info">
-                <div>
-                </div>
-              </div>
-            </div>
-          </div>
-             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
-            <div class="portfolio-wrap">
-                <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
-                </a>
-              <div class="portfolio-info">
-                <div>
-                </div>
-              </div>
-            </div>
-          </div>
-             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
-            <div class="portfolio-wrap">
-                <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
-                </a>
-              <div class="portfolio-info">
-                <div>
-                </div>
-              </div>
-            </div>
-          </div>
-             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
-            <div class="portfolio-wrap">
-                <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
-                </a>
-              <div class="portfolio-info">
-                <div>
-                </div>
-              </div>
-            </div>
-          </div>
-             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
-            <div class="portfolio-wrap">
-                <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
-                </a>
-              <div class="portfolio-info">
-                <div>
-                </div>
-              </div>
-            </div>
-          </div>
-             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
-            <div class="portfolio-wrap">
-                <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
-                </a>
-              <div class="portfolio-info">
-                <div>
-                </div>
-              </div>
-            </div>
-          </div>
-             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
-            <div class="portfolio-wrap">
-                <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
-                </a>
-              <div class="portfolio-info">
-                <div>
-                </div>
-              </div>
-            </div>
-          </div>
-             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
-            <div class="portfolio-wrap">
-                <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
-                </a>
-              <div class="portfolio-info">
-                <div>
-                </div>
-              </div>
-            </div>
-          </div>
-             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
-            <div class="portfolio-wrap">
-                <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
-                </a>
-              <div class="portfolio-info">
-                <div>
-                </div>
-              </div>
-            </div>
-          </div>
-             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
-            <div class="portfolio-wrap">
-                <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
-                </a>
-              <div class="portfolio-info">
-                <div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-             <div class="col-lg-4 col-md-6 portfolio-item filter-b">
-            <div class="portfolio-wrap">
-                <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
-                </a>
-              <div class="portfolio-info">
-                <div>
-                </div>
-              </div>
-            </div>
-          </div>
-             <div class="col-lg-4 col-md-6 portfolio-item filter-b">
-            <div class="portfolio-wrap">
-                <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
-                </a>
-              <div class="portfolio-info">
-                <div>
-                </div>
-              </div>
-            </div>
-          </div>
-             <div class="col-lg-4 col-md-6 portfolio-item filter-b">
-            <div class="portfolio-wrap">
-                <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
-                </a>
-              <div class="portfolio-info">
-                <div>
-                </div>
-              </div>
-            </div>
-          </div>
-             <div class="col-lg-4 col-md-6 portfolio-item filter-b">
-            <div class="portfolio-wrap">
-                <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
+              <img src="{% static 'assetspartners/Ads/Incubators/3i.jpg' %}" class="img-fluid" alt="">
                 </a>
               <div class="portfolio-info">
                 <div>
@@ -286,7 +134,7 @@
              <div class="col-lg-4 col-md-6 portfolio-item filter-c">
             <div class="portfolio-wrap">
                 <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
+              <img src="{% static 'assetspartners/Ads/Knowledge-Partners/iB hubs.jpg' %}" class="img-fluid" alt="">
                 </a>
               <div class="portfolio-info">
                 <div>
@@ -294,10 +142,10 @@
               </div>
             </div>
           </div>
-            <div class="col-lg-4 col-md-6 portfolio-item filter-c">
+             <div class="col-lg-4 col-md-6 portfolio-item filter-b">
             <div class="portfolio-wrap">
                 <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
+              <img src="{% static 'assetspartners/Ads/Investor-Partners/avaana.png' %}" class="img-fluid" alt="">
                 </a>
               <div class="portfolio-info">
                 <div>
@@ -305,10 +153,10 @@
               </div>
             </div>
           </div>
-            <div class="col-lg-4 col-md-6 portfolio-item filter-c">
+             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
             <div class="portfolio-wrap">
                 <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
+              <img src="{% static 'assetspartners/Ads/Incubators/startup chaupal.jpg' %}" class="img-fluid" alt="">
                 </a>
               <div class="portfolio-info">
                 <div>
@@ -316,10 +164,165 @@
               </div>
             </div>
           </div>
-            <div class="col-lg-4 col-md-6 portfolio-item filter-c">
+             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
             <div class="portfolio-wrap">
                 <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
+              <img src="{% static 'assetspartners/Ads/Incubators/venture catlyst.jpg' %}" class="img-fluid" alt="">
+                </a>
+              <div class="portfolio-info">
+                <div>
+                </div>
+              </div>
+            </div>
+          </div>
+             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
+            <div class="portfolio-wrap">
+                <a href="https://www.dei.ac.in/dei/">
+              <img src="{% static 'assetspartners/Ads/Incubators/verist law.jpg' %}" class="img-fluid" alt="">
+                </a>
+              <div class="portfolio-info">
+                <div>
+                </div>
+              </div>
+            </div>
+          </div>
+             <div class="col-lg-4 col-md-6 portfolio-item filter-b">
+            <div class="portfolio-wrap">
+                <a href="https://www.dei.ac.in/dei/">
+              <img src="{% static 'assetspartners/Ads/Investor-Partners/fair angels.jpg' %}" class="img-fluid" alt="">
+                </a>
+              <div class="portfolio-info">
+                <div>
+                </div>
+              </div>
+            </div>
+          </div>
+             <div class="col-lg-4 col-md-6 portfolio-item filter-g">
+            <div class="portfolio-wrap">
+                <a href="https://www.dei.ac.in/dei/">
+              <img src="{% static 'assetspartners/Ads/ecosystem/vruksh-ecosystem.png' %}" class="img-fluid" alt="">
+                </a>
+              <div class="portfolio-info">
+                <div>
+                </div>
+              </div>
+            </div>
+          </div>
+             <div class="col-lg-4 col-md-6 portfolio-item filter-h">
+            <div class="portfolio-wrap">
+                <a href="https://www.dei.ac.in/dei/">
+              <img src="{% static 'assetspartners/Ads/institution/bits pilani.jpg' %}" class="img-fluid" alt="">
+                </a>
+              <div class="portfolio-info">
+                <div>
+                </div>
+              </div>
+            </div>
+          </div>
+             <div class="col-lg-4 col-md-6 portfolio-item filter-i">
+            <div class="portfolio-wrap">
+                <a href="https://www.dei.ac.in/dei/">
+              <img src="{% static 'assetspartners/Ads/program/Casiglobal.jpg' %}" class="img-fluid" alt="">
+                </a>
+              <div class="portfolio-info">
+                <div>
+                </div>
+              </div>
+            </div>
+          </div>
+             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
+            <div class="portfolio-wrap">
+                <a href="https://www.dei.ac.in/dei/">
+              <img src="{% static 'assetspartners/Ads/Incubators/Startup Xperts.jpg' %}" class="img-fluid" alt="">
+                </a>
+              <div class="portfolio-info">
+                <div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
+            <div class="portfolio-wrap">
+                <a href="https://www.dei.ac.in/dei/">
+              <img src="{% static 'assetspartners/Ads/Incubators/ciie.png' %}" class="img-fluid" alt="">
+                </a>
+              <div class="portfolio-info">
+                <div>
+                </div>
+              </div>
+            </div>
+          </div>
+             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
+            <div class="portfolio-wrap">
+                <a href="https://www.dei.ac.in/dei/">
+              <img src="{% static 'assetspartners/Ads/Incubators/excubator.png' %}" class="img-fluid" alt="">
+                </a>
+              <div class="portfolio-info">
+                <div>
+                </div>
+              </div>
+            </div>
+          </div>
+             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
+            <div class="portfolio-wrap">
+                <a href="https://www.dei.ac.in/dei/">
+              <img src="{% static 'assetspartners/Ads/Incubators/No stops.jpg' %}" class="img-fluid" alt="">
+                </a>
+              <div class="portfolio-info">
+                <div>
+                </div>
+              </div>
+            </div>
+          </div>
+             <div class="col-lg-4 col-md-6 portfolio-item filter-a">
+            <div class="portfolio-wrap">
+                <a href="https://www.dei.ac.in/dei/">
+              <img src="{% static 'assetspartners/Ads/Incubators/riidl.jpg' %}" class="img-fluid" alt="">
+                </a>
+              <div class="portfolio-info">
+                <div>
+                </div>
+              </div>
+            </div>
+          </div>
+             <div class="col-lg-4 col-md-6 portfolio-item filter-b">
+            <div class="portfolio-wrap">
+                <a href="https://www.dei.ac.in/dei/">
+              <img src="{% static 'assetspartners/Ads/Investor-Partners/ventures-shirish.png' %}" class="img-fluid" alt="">
+                </a>
+              <div class="portfolio-info">
+                <div>
+                </div>
+              </div>
+            </div>
+          </div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-a">
+            <div class="portfolio-wrap">
+                <a href="https://www.dei.ac.in/dei/">
+              <img src="{% static 'assetspartners/Ads/Incubators/SCEI.jpg' %}" class="img-fluid" alt="">
+                </a>
+              <div class="portfolio-info">
+                <div>
+                </div>
+              </div>
+            </div>
+          </div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-a">
+            <div class="portfolio-wrap">
+                <a href="https://www.dei.ac.in/dei/">
+              <img src="{% static 'assetspartners/Ads/Incubators/SINE.jpg' %}" class="img-fluid" alt="">
+                </a>
+              <div class="portfolio-info">
+                <div>
+                </div>
+              </div>
+            </div>
+          </div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-a">
+            <div class="portfolio-wrap">
+                <a href="https://www.dei.ac.in/dei/">
+              <img src="{% static 'assetspartners/Ads/Incubators/supreme.jpg' %}" class="img-fluid" alt="">
                 </a>
               <div class="portfolio-info">
                 <div>
