partners modified[VM]

--- a/templates/partners.html
+++ b/templates/partners.html
@@ -103,6 +103,7 @@
                 <li data-filter=".filter-g">Ecosystem Partners</li>
                 <li data-filter=".filter-h">Institution Partners</li>
                 <li data-filter=".filter-i"> Program Partners</li>
+                <li data-filter=".filter-j"> Accelerator Partners</li>
             </ul>
           </div>
         </div>
@@ -330,10 +331,10 @@
               </div>
             </div>
           </div>
-            <div class="col-lg-4 col-md-6 portfolio-item filter-c">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-j">
             <div class="portfolio-wrap">
                 <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
+              <img src="{% static 'assetspartners/Ads/accelerators/sTARTUPBAY.jpg' %}" class="img-fluid" alt="">
                 </a>
               <div class="portfolio-info">
                 <div>
@@ -341,10 +342,10 @@
               </div>
             </div>
           </div>
-            <div class="col-lg-4 col-md-6 portfolio-item filter-c">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-a">
             <div class="portfolio-wrap">
                 <a href="https://www.dei.ac.in/dei/">
-              <img src="{% static 'assetspartners/Ads/Outreach-Partners/Untitled-4.png' %}" class="img-fluid" alt="">
+              <img src="{% static 'assetspartners/Ads/Incubators/startuped.jpg' %}" class="img-fluid" alt="">
                 </a>
               <div class="portfolio-info">
                 <div>
