--- a/templates/partners.html
+++ b/templates/partners.html
@@ -10,7 +10,7 @@
 
     <meta name="author" content="Muhammad Morshed" />
 
-    <title>Partners | ActionPlan</title>
+    <title>Sponsors | ActionPlan</title>
 
     <!-- Mobile Specific Meta
 		================================================== -->
@@ -68,11 +68,10 @@
           <li><a class="nav-link scrollto" href="#">Home</a></li>
           <li><a class="nav-link scrollto" href="{% url 'actionplan:home-about' %}">About</a></li>
             <li><a class="nav-link scrollto" href="{% url 'actionplan:mentor-view' %}">Mentorship</a></li>
-          <li><a class="nav-link scrollto active" href="{% url 'actionplan:sectors' %}">Sectors</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'actionplan:sectors' %}">Sectors</a></li>
           <li><a class="nav-link scrollto " href="{% url 'actionplan:incentives' %}">Incentives</a></li>
             <li><a class="nav-link scrollto " href="{% url 'actionplan:structure' %}">Structure</a></li>
-
-          <li><a class="nav-link scrollto" href="{% url 'actionplan:partners' %}">Partners</a></li>
+          <li><a class="nav-link scrollto active" href="{% url 'actionplan:partners' %}">Sponsors</a></li>
            <li><a class="nav-link scrollto" href="{% url 'actionplan:home-contact-us' %}">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
