--- a/templates/sectors.html
+++ b/templates/sectors.html
@@ -487,8 +487,7 @@ Pixel Grid
           <li><a class="nav-link scrollto active" href="{% url 'actionplan:sectors' %}">Sectors</a></li>
           <li><a class="nav-link scrollto " href="{% url 'actionplan:incentives' %}">Incentives</a></li>
             <li><a class="nav-link scrollto " href="{% url 'actionplan:structure' %}">Structure</a></li>
-          
-          <li><a class="nav-link scrollto" href="{% url 'actionplan:partners' %}">Partners</a></li>
+          <li><a class="nav-link scrollto" href="{% url 'actionplan:partners' %}">Sponsors</a></li>
            <li><a class="nav-link scrollto" href="{% url 'actionplan:home-contact-us' %}">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
